# grep_cli

./: .gitignore  Assumptions.txt  CMakeLists.txt  file.txt  main.cpp
dir/: file1.txt  file2.txt
dir/inner/: file3.txt
headers/: custom_exceptions.h  utils.h
src/: utils.cpp
tests/: test_utils.cpp
